# tinygpt

./: .gitignore  .swiftformat  AGENTS.md  BLOG.md  HANDOFF.md  MILESTONES.md  NIGHTLY.md  PROJECT_STATUS.md  README.md  WHILE_YOU_SLEPT.md
bench/: benchmarks.json  run_quality_evals.sh
browser/: .env.example  README.md  astro.config.mjs  audit_mem64.mjs  audit_mobile.mjs  chevron_audit.mjs  diagnose_behemoth.mjs  e2e_browser.mjs  e2e_chrome.mjs  finalize_gallery.mjs  index.html  measure_behemoth.mjs  measure_curve.mjs  measure_mega.mjs  measure_mem64.mjs  measure_xl.mjs  nitpicks.mjs  package-lock.json  package.json  perf_audit.mjs  pnpm-lock.yaml  roadmap.html  score_gallery.mjs  score_gallery.ts  score_gallery_tasks.mjs  screenshot_evo.mjs  screenshot_loss_meaning.mjs  smoke_autosave.mjs  smoke_f16.mjs  smoke_live.mjs  test_huge_train.mjs  train_demo.mjs  train_demo_medium.mjs  train_gallery_one.mjs  tsconfig.json  verify_demo.mjs  webgpu_test.mjs
checkpoints/: README.md
configs/: lora.json  model.byte-tinygpt-v0.json  training.json
data/: README.md  dataset_builder.py
docs/: CITATIONS.md  DRILLDOWN.md  GRPO_CLARIFY.md  MAP.md  PLAN.md  PROJECT_RECOMMENDATION_CONTEXT.md  RETROSPECTIVE.md  agent_runtime.md  annotated_transcript.md  audit_2026.md  backlog.md  bpe_browser_scoring.md  browser_notes.md  (+46 more)
scripts/data-prep/: bfcl_reader.py  github_reader.py  prep_data.py  pyproject.toml  tau_bench_reader.py
scripts/hf-downloader/: Cargo.toml
scripts/hf-downloader/src/: main.rs
scripts/parquet-decoder/: Cargo.toml
scripts/parquet-decoder/src/: main.rs
(+762 files in other folders)
